--- a/styles/main.styles.css
+++ b/styles/main.styles.css
@@ -78,6 +78,18 @@ thead {
   margin: 0.5in;
 }
 
+@media print {
+  html,
+  body {
+    width: 215.9mm !important;
+    height: 355.6mm !important;
+    overflow: initial !important;
+    padding-right: 5%;
+    padding-left: 2.5%;
+    padding-top: 2.5%;
+  }
+}
+
 .barangay-label {
   font-size: 24px;
   padding: 10px;
